--- a/src/components/CreatePackageModal/CreatePackageModal.css
+++ b/src/components/CreatePackageModal/CreatePackageModal.css
@@ -135,8 +135,13 @@
   margin-top: 20px;
 }
 
-.upload-package-btn:hover {
+.upload-package-btn:hover:not(:disabled) {
   background-color: #e65c00;
+}
+
+.upload-package-btn:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
 }
 
 /* Responsive Styles */
@@ -172,4 +177,12 @@
   .form-group textarea {
     padding: 6px;
   }
+}
+.error-message {
+  background-color: #e65c00;
+  color: #080000;
+  padding: 0.75rem;
+  border-radius: 0.375rem;
+  margin-bottom: 1rem;
+  font-size: 0.875rem;
 }
